--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarProfesor.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarProfesor.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="416.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirProfesor">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="259.0" prefWidth="437.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorMostrarProfesor">
    <children>
       <GridPane alignment="CENTER_LEFT" hgap="10.0" prefHeight="366.0" prefWidth="408.0" vgap="10.0">
         <columnConstraints>
@@ -16,12 +15,18 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Nombre: " GridPane.halignment="LEFT">
+            <Label text="DATOS DEL PROFESOR" textFill="#bfa1a1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label text="Nombre: " GridPane.halignment="LEFT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -29,7 +34,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="DNI: " GridPane.halignment="LEFT" GridPane.rowIndex="1">
+            <Label text="DNI: " GridPane.halignment="LEFT" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -37,7 +42,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Correo electrónico:" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+            <Label text="Correo electrónico:" GridPane.halignment="LEFT" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -45,27 +50,18 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="tfNombre" promptText="Nombre" GridPane.columnIndex="1">
-               <tooltip>
-                  <Tooltip text="Introduzca nombre y apellidos" />
-               </tooltip>
-            </TextField>
-            <TextField fx:id="tfDni" promptText="Dni" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="tfCorreo" promptText="Correo" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lbNombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="lbDni" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lbCorreo" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+      <HBox alignment="TOP_RIGHT" prefHeight="45.0" prefWidth="305.0" spacing="20.0">
          <children>
             <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="25.0" prefWidth="80.0" text="Aceptar" />
-            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="25.0" prefWidth="80.0" text="Cancelar" />
-            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#limpiar" prefHeight="25.0" prefWidth="80.0" text="Limpiar">
-               <tooltip>
-                  <Tooltip text="Limpiar datos del formulario" />
-               </tooltip>
-            </Button>
+            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" prefHeight="25.0" prefWidth="80.0" text="Borrar" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
