--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarTutorias.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarTutorias.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="300.0" prefWidth="663.0" spacing="20.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarTutorias">
+<VBox alignment="CENTER" prefHeight="409.0" prefWidth="681.0" spacing="20.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarTutorias">
    <children>
       <Label style="-fx-font-size: 25;" text="Tutorías" />
       <TableView fx:id="tvTutorias" prefHeight="359.0" prefWidth="611.0">
@@ -15,7 +16,23 @@
           <TableColumn fx:id="tcTutoria" prefWidth="319.0" text="Tutoría" />
         </columns>
       </TableView>
-      <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" text="Aceptar" />
+      <HBox alignment="CENTER_LEFT" prefHeight="137.0" prefWidth="641.0">
+         <children>
+            <Label alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="231.0" text="Buscar tutorías por profesor: ">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="tfTutoriaProfesor" promptText="Nombre profesor/a">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
