--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/VentanaPrincipal.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/VentanaPrincipal.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="395.0" prefWidth="751.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorVentanaPrincipal">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="930.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorVentanaPrincipal">
    <children>
       <MenuBar>
         <menus>
@@ -28,7 +28,7 @@
             <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
          </padding>
          <children>
-            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="250.0" text="Profesores">
+            <TitledPane collapsible="false" prefHeight="284.0" prefWidth="220.0" text="Profesores">
                <content>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
@@ -79,7 +79,7 @@
                   </ImageView>
                </graphic>
             </TitledPane>
-            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="250.0" text="Alumnos">
+            <TitledPane collapsible="false" prefHeight="284.0" prefWidth="220.0" text="Alumnos">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -129,7 +129,7 @@
                      </children>
                   </VBox>
                </content></TitledPane>
-            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="250.0" text="Tutorías">
+            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="220.0" text="Tutorías">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -179,11 +179,11 @@
                      </children>
                   </VBox>
                </content></TitledPane>
-            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="250.0" text="Sesiones">
+            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="220.0" text="Sesiones">
                <content>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Button fx:id="btnListarSesiones" mnemonicParsing="false"  prefHeight="50.0" prefWidth="130.0" text="Listar">
+                        <Button fx:id="btnListarSesiones" mnemonicParsing="false" onAction="#listarSesiones" prefHeight="50.0" prefWidth="130.0" text="Listar">
                            <graphic>
                               <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -192,7 +192,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btnAnadirSesion" mnemonicParsing="false"  prefHeight="50.0" prefWidth="130.0" text="Añadir">
+                        <Button fx:id="btnAnadirSesion" mnemonicParsing="false" onAction="#anadirSesion" prefHeight="50.0" prefWidth="130.0" text="Añadir">
                            <graphic>
                               <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -201,7 +201,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btnBuscarSesion" mnemonicParsing="false"  prefHeight="50.0" prefWidth="130.0" text="Buscar">
+                        <Button fx:id="btnBuscarSesion" mnemonicParsing="false" onAction="#buscarSesion" prefHeight="50.0" prefWidth="130.0" text="Buscar">
                            <graphic>
                               <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -210,7 +210,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btnBorrarSesion" mnemonicParsing="false"  prefHeight="50.0" prefWidth="130.0" text="Borrar">
+                        <Button fx:id="btnBorrarSesion" mnemonicParsing="false" onAction="#borrarSesion" prefHeight="50.0" prefWidth="130.0" text="Borrar">
                            <graphic>
                               <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -226,6 +226,57 @@
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../imagenes/sesiones.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </TitledPane>
+            <TitledPane collapsible="false" prefHeight="300.0" prefWidth="220.0" text="Citas">
+               <content>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Button fx:id="btnListarCitas" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Listar">
+                           <graphic>
+                              <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../imagenes/iconoListar.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="btnAnadirCita" mnemonicParsing="false" onAction="#anadirCita" prefHeight="50.0" prefWidth="130.0" text="Añadir">
+                           <graphic>
+                              <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../imagenes/iconoAnadir.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="btnBuscarCita" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Buscar">
+                           <graphic>
+                              <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../imagenes/iconoBuscar.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="btnBorrarCita" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Borrar">
+                           <graphic>
+                              <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../imagenes/iconoBorrar.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </VBox>
+               </content>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/citas.png" />
                      </image>
                   </ImageView>
                </graphic>
