Correción de errores, diseño. Tarea finalizada.

--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarCitas.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarCitas.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="502.0" prefWidth="982.0" spacing="20.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarCitas">
+<VBox alignment="CENTER" prefHeight="502.0" prefWidth="982.0" spacing="20.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarCitas">
    <children>
-      <Label style="-fx-font-size: 25;" text="Citas" />
+      <Label alignment="CENTER" prefHeight="30.0" prefWidth="942.0" style="-fx-font-size: 25;" text="Citas" textFill="#c6a7a7" />
       <TableView fx:id="tvCitas" prefHeight="359.0" prefWidth="611.0">
         <columns>
             <TableColumn fx:id="tcAlumno" prefWidth="116.0" text="Alumno/a" />
