--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/estilos.css
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/estilos.css
@@ -1,23 +1,23 @@
 * {
 	-fx-font: 14 arial;
-	-fx-base: #b0c4de;
+	-fx-base: #D5DFD9;
 }
 
 .vbox {
-	-fx-background-color: #b0c4de;
+	-fx-background-color: #EFEEEE;
 }
 
 .menu-item, .context-menu {
-	-fx-background-color: #b0c4de;
+	-fx-background-color: #D5DFD9;
 }
 
 .menu-item:hover {
-	-fx-background-color: #4682b4;
+	-fx-background-color: #61b4b8;
 }
 
 .titled-pane .title {
 	-fx-background-radius: 20 20 0 0;
-	-fx-border-color: none;
+	-fx-border-color: #CDE1D2;
 }
 
 .titled-pane .content {
@@ -31,19 +31,19 @@
 }
 
 .titled-pane .content {
-	-fx-background-color: #4682b4;
+	-fx-background-color: #999999;
 }
 
 .button {
 	-fx-background-radius: 10;
 }
 
-#btAnadir, #btAceptar, #btListar, #btAnadirHoras, #btAnadirPrecioMaterial {
+#btAnadir, #btAceptar, #btListar, #btAnadirHoras, #btnAceptar {
 	-fx-font: 22 "arial";
 	-fx-base: #b6e7c9;
 }
 
-#btCancelar, #btBorrar, #btCerrar {
+#btCancelar, #btBorrar, #btCerrar, #btnCancelar, #btnBorrar, #btnEliminar{
 	-fx-font: 20 "arial";
 	-fx-base: #dc143c;
 }
