--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AcercaDe.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AcercaDe.fxml
@@ -9,14 +9,14 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="450.0" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="217.0" fitWidth="269.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/logo-ies.png" />
          </image>
       </ImageView>
       <Label style="-fx-font: 25 Arial;" text="Modulo Programacion - JavaFX" />
       <Label style="-fx-font: 20 Arial;" text="Tutorias" />
-      <Label style="-fx-font: 20 Arial;" text="Maria del Mar Membrive Plaza" />
+      <Label style="-fx-font: 20 Arial;" text="María del Mar Membrive Plaza" />
    </children>
    <padding>
       <Insets left="20.0" right="20.0" top="20.0" />
