--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirCitas.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirCitas.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="436.0" prefWidth="637.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirCita">
+<VBox prefHeight="401.0" prefWidth="637.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirCita">
    <children>
       <GridPane hgap="10.0" prefHeight="364.0" prefWidth="679.0" vgap="10.0">
         <columnConstraints>
@@ -44,9 +45,19 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="119.0" prefWidth="404.0" spacing="30.0">
          <children>
-            <Button id="btAceptar" fx:id="btnAceptar" mnemonicParsing="false" onAction="#anadirCita" text="Aceptar" />
-            <Button id="btCancelar" fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" text="Borrar" />
+            <Button id="btAceptar" fx:id="btnAceptar" mnemonicParsing="false" onAction="#anadirCita" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button id="btCancelar" fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="86.0" text="Cancelar" />
+            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" prefHeight="30.0" prefWidth="86.0">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="27.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/limpiar.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
