--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirProfesor.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirProfesor.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -7,10 +8,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="416.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirProfesor">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="416.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirProfesor">
    <children>
-      <GridPane alignment="CENTER_LEFT" hgap="10.0" prefHeight="366.0" prefWidth="408.0" vgap="10.0">
+      <GridPane alignment="CENTER_LEFT" hgap="10.0" prefHeight="83.0" prefWidth="416.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -49,22 +49,47 @@
                <tooltip>
                   <Tooltip text="Introduzca nombre y apellidos" />
                </tooltip>
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
             </TextField>
-            <TextField fx:id="tfDni" promptText="Dni" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="tfCorreo" promptText="Correo" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="tfDni" promptText="Dni" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="tfCorreo" promptText="Correo" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets top="10.0" />
+               </GridPane.margin></TextField>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+      <HBox prefHeight="60.0" prefWidth="384.0" spacing="20.0">
          <children>
-            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="25.0" prefWidth="80.0" text="Aceptar" />
-            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="25.0" prefWidth="80.0" text="Cancelar" />
-            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#limpiar" prefHeight="25.0" prefWidth="80.0" text="Limpiar">
+            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="30.0" prefWidth="86.0" text="Aceptar">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin></Button>
+            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="86.0" text="Cancelar">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin></Button>
+            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#limpiar" prefHeight="35.0" prefWidth="86.0">
                <tooltip>
                   <Tooltip text="Limpiar datos del formulario" />
                </tooltip>
+               <HBox.margin>
+                  <Insets top="9.0" />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/limpiar.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
          <padding>
