--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirSesiones.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirSesiones.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -38,9 +39,16 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="119.0" prefWidth="404.0" spacing="30.0">
          <children>
-            <Button id="btAceptar" fx:id="btnAceptar" mnemonicParsing="false" onAction="#anadirSesion" text="Aceptar" />
-            <Button id="btCancelar" fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" text="Borrar" />
+            <Button id="btAceptar" fx:id="btnAceptar" mnemonicParsing="false" onAction="#anadirSesion" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button id="btCancelar" fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="86.0" text="Cancelar" />
+            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" prefHeight="30.0" prefWidth="86.0">
+               <graphic>
+                  <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/limpiar.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
