--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirTutorias.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/AnadirTutorias.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.text.*?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirTutorias">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="500.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorAnadirTutorias">
    <children>
       <GridPane alignment="CENTER_LEFT" hgap="10.0" prefHeight="252.0" prefWidth="500.0" vgap="10.0">
          <children>
@@ -44,12 +45,19 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="78.0" prefWidth="500.0" spacing="20.0">
          <children>
-            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="25.0" prefWidth="80.0" text="Aceptar" />
-            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="25.0" prefWidth="80.0" text="Cancelar" />
-            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#limpiar" prefHeight="25.0" prefWidth="80.0" text="Limpiar">
+            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="86.0" text="Cancelar" />
+            <Button fx:id="btnLimpiar" mnemonicParsing="false" onAction="#limpiar" prefHeight="30.0" prefWidth="86.0">
                <tooltip>
                   <Tooltip text="Limpiar datos del formulario" />
                </tooltip>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="72.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/limpiar.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
          <padding>
