--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/BuscarCitas.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/BuscarCitas.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="731.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorBuscarCitas">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="731.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorBuscarCitas">
    <children>
       <GridPane alignment="CENTER_LEFT" hgap="10.0" prefHeight="301.0" prefWidth="731.0" vgap="10.0">
          <children>
@@ -67,10 +67,10 @@
             <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <HBox alignment="CENTER" prefHeight="118.0" prefWidth="731.0" spacing="20.0">
+      <HBox alignment="CENTER" prefHeight="62.0" prefWidth="731.0" spacing="20.0">
          <children>
-            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#buscarCita" prefHeight="25.0" prefWidth="80.0" text="Aceptar" />
-            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="25.0" prefWidth="80.0" text="Cancelar" />
+            <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#buscarCita" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="86.0" text="Cancelar" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
