--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarAlumnos.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarAlumnos.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarAlumnos">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="600.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarAlumnos">
    <children>
-      <Label text="DATOS DEL ALUMNADO" textFill="#c6a7a7">
+      <Label alignment="CENTER" prefHeight="56.0" prefWidth="589.0" text="DATOS DEL ALUMNADO" textFill="#c6a7a7">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -27,6 +26,9 @@
             <TableColumn fx:id="tcCorreoAlumno" prefWidth="150.0" text="Correo electrónico" />
             <TableColumn fx:id="tcExpediente" minWidth="0.0" prefWidth="277.0" text="Expediente Académico" />
          </columns>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
       </TableView>
       <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="25.0" prefWidth="145.0" text="Aceptar">
          <opaqueInsets>
