--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarProfesores.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarProfesores.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarProfesores">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="600.0" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarProfesores">
    <children>
-      <Label text="DATOS DEL PROFESORADO" textFill="#c6a7a7">
+      <Label alignment="CENTER" prefHeight="56.0" prefWidth="587.0" text="DATOS DEL PROFESORADO" textFill="#c6a7a7">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -20,12 +20,15 @@
             <Insets bottom="20.0" left="15.0" right="10.0" top="20.0" />
          </padding>
       </Label>
-      <TableView fx:id="tvProfesores" prefHeight="225.0" prefWidth="600.0">
+      <TableView fx:id="tvProfesores" prefHeight="225.0" prefWidth="400.0">
         <columns>
           <TableColumn fx:id="tcNombre" prefWidth="172.0" text="Nombre" />
           <TableColumn fx:id="tcDni" prefWidth="150.0" text="DNI" />
             <TableColumn fx:id="tcCorreo" minWidth="0.0" prefWidth="277.0" text="Correo electrónico" />
         </columns>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
       </TableView>
       <Button fx:id="btnAceptar" mnemonicParsing="false" onAction="#aceptar" prefHeight="25.0" prefWidth="145.0" text="Aceptar">
          <VBox.margin>
