--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarTutorias.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/ListarTutorias.fxml
@@ -9,7 +9,7 @@
 
 <VBox alignment="CENTER" prefHeight="409.0" prefWidth="681.0" spacing="20.0" styleClass="vbox" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.tutorias.mvc.vista.iugrafica.controladoresvistas.ControladorListarTutorias">
    <children>
-      <Label style="-fx-font-size: 25;" text="Tutorías" />
+      <Label style="-fx-font-size: 25;" text="Tutorías" textFill="#c6a7a7" />
       <TableView fx:id="tvTutorias" prefHeight="359.0" prefWidth="611.0">
         <columns>
           <TableColumn fx:id="tcProfesor" prefWidth="303.0" text="Profesor/a" />
@@ -18,7 +18,7 @@
       </TableView>
       <HBox alignment="CENTER_LEFT" prefHeight="137.0" prefWidth="641.0">
          <children>
-            <Label alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="231.0" text="Buscar tutorías por profesor: ">
+            <Label alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="231.0" text="Buscar tutorías por DNI profesor: ">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                </padding>
@@ -26,7 +26,7 @@
                   <Insets top="10.0" />
                </HBox.margin>
             </Label>
-            <TextField fx:id="tfTutoriaProfesor" promptText="Nombre profesor/a">
+            <TextField fx:id="tfTutoriaProfesor" promptText="dni">
                <HBox.margin>
                   <Insets top="10.0" />
                </HBox.margin>
