--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarSesion.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarSesion.fxml
@@ -51,8 +51,8 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="59.0" prefWidth="471.0" spacing="20.0">
          <children>
-            <Button fx:id="btnAceptar" defaultButton="true" mnemonicParsing="false" onAction="#aceptar" text="Aceptar" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" text="Borrar" />
+            <Button fx:id="btnAceptar" defaultButton="true" mnemonicParsing="false" onAction="#aceptar" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" prefHeight="30.0" prefWidth="86.0" text="Borrar" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -60,5 +60,3 @@
       </HBox>
    </children>
 </VBox>
-
-
