--- a/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarTutorias.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/tutorias/mvc/vista/iugrafica/vistas/MostrarTutorias.fxml
@@ -39,8 +39,8 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="51.0" prefWidth="326.0" spacing="20.0">
          <children>
-            <Button fx:id="btnAceptar" defaultButton="true" mnemonicParsing="false" onAction="#aceptar" text="Aceptar" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" text="Borrar" />
+            <Button fx:id="btnAceptar" defaultButton="true" mnemonicParsing="false" onAction="#aceptar" prefHeight="30.0" prefWidth="86.0" text="Aceptar" />
+            <Button fx:id="btnBorrar" mnemonicParsing="false" onAction="#borrar" prefHeight="30.0" prefWidth="86.0" text="Borrar" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
